--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,23 +27,22 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  animated_text_kit: ^4.2.1
-  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  animated_text_kit: ^4.2.1
+  cloud_firestore: ^3.1.8
+  cupertino_icons: ^1.0.2
+  firebase_core: ^1.12.0
+  flutter_dotenv: ^5.0.2
   google_fonts: ^2.3.1
+  intl: ^0.17.0
+  provider: ^6.0.2
+  url_launcher: ^6.0.20
+  zefyr: ^1.0.0-rc.5
+  lottie: ^1.2.2
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
-  firebase_core: ^1.12.0
-  cloud_firestore: ^3.1.8
-  intl: ^0.17.0
   flutter_test:
     sdk: flutter
 
@@ -59,6 +58,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/egnimos_bw.png
+    - assets/json/not-found.json
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
