--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,8 +57,9 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/egnimos_bw.png
-    - assets/json/not-found.json
+    - assets/images/png/
+    # - assets/images
+    - assets/json/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
