--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.0.20
   zefyr: ^1.0.0-rc.5
   lottie: ^1.2.2
+  flutter_markdown: ^0.6.9
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -58,6 +59,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/png/
+    - assets/md_pages/
     # - assets/images
     - assets/json/
   #   - images/a_dot_ham.jpeg
