--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,20 +27,24 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
   animated_text_kit: ^4.2.1
+  cached_network_image: ^3.2.1
   cloud_firestore: ^3.1.8
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.3.20
   firebase_core: ^1.12.0
+  flutter:
+    sdk: flutter
   flutter_dotenv: ^5.0.2
+  flutter_markdown: ^0.6.9
+  font_awesome_flutter: ^10.1.0
   google_fonts: ^2.3.1
   intl: ^0.17.0
+  lottie: ^1.2.2
   provider: ^6.0.2
   url_launcher: ^6.0.20
-  zefyr: ^1.0.0-rc.5
-  lottie: ^1.2.2
-  flutter_markdown: ^0.6.9
+  file_picker: ^4.6.1
+  cross_file: ^0.3.3+1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
