--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,12 @@ dependencies:
   animated_text_kit: ^4.2.1
   cached_network_image: ^3.2.1
   cloud_firestore: ^3.1.8
+  cross_file: ^0.3.3+1
   cupertino_icons: ^1.0.2
-  firebase_auth: ^3.3.20
-  firebase_core: ^1.12.0
+  file_picker: ^4.6.1
+  firebase_auth: ^3.4.0
+  firebase_core: ^1.19.0
+  firebase_storage: ^10.3.0
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
@@ -41,10 +44,9 @@ dependencies:
   google_fonts: ^2.3.1
   intl: ^0.17.0
   lottie: ^1.2.2
+  mime: ^1.0.2
   provider: ^6.0.2
   url_launcher: ^6.0.20
-  file_picker: ^4.6.1
-  cross_file: ^0.3.3+1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
