:fire: checkbox node added with key events command and code based command

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
       path: super_editor
   super_text_layout: ^0.1.0
   url_launcher: ^6.0.20
+  matrix4_transform: ^2.0.1
 
 dependency_overrides:
   # Override to local mono-repo path so devs can test this repo
