--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   super_text_layout: ^0.1.0
   url_launcher: ^6.0.20
   matrix4_transform: ^2.0.1
+  photo_view: ^0.14.0
 
 dependency_overrides:
   # Override to local mono-repo path so devs can test this repo
