:fire: #28 #26 #27 #23 all these issues has been resolved with adding the enhancements Font-Family, Styler (Serializaton & Deserialization), Search Support, Sorting based on Categories & Tags, View Blog added with UI improments & responsivnes , Caching the font family while loading the blog, Reading time with view count support and active visiting users on the a given blog has been added to the view blog screen and all these issues are in review

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cross_file: ^0.3.3+1
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+2
+  dropdown_search: ^5.0.2
   dynamic_cached_fonts: ^1.0.0
   file_picker: ^4.6.1
   firebase_auth: ^3.4.0
@@ -62,7 +63,8 @@ dependencies:
   super_text_layout: ^0.1.0
   url_launcher: ^6.0.20
   uuid: ^3.0.6
-  dropdown_search: ^5.0.2
+  visibility_detector: ^0.3.3
+  flutter_widget_from_html: ^0.8.5
 
 dependency_overrides:
   # Override to local mono-repo path so devs can test this repo
