--- a/package.json
+++ b/package.json
@@ -18,11 +18,28 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@calumk/editorjs-codeflask": "^1.0.9",
+    "@editorjs/attaches": "^1.3.0",
+    "@editorjs/editorjs": "^2.28.2",
+    "@editorjs/embed": "^2.6.0",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/nested-list": "^1.3.0",
+    "@editorjs/table": "^2.2.2",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@rxpm/editor-js-code": "^0.0.1",
     "bootstrap": "^5.3.1",
+    "codex-notifier": "^1.1.2",
+    "codex-tooltip": "^1.0.5",
     "marked": "^4.3.0",
     "ngx-markdown": "^16.0.0",
     "prismjs": "^1.28.0",
+    "prosemirror-example-setup": "^1.2.2",
+    "prosemirror-model": "^1.19.3",
+    "prosemirror-schema-basic": "^1.2.2",
+    "prosemirror-schema-list": "^1.3.0",
+    "prosemirror-state": "^1.4.3",
+    "prosemirror-transform": "^1.7.5",
+    "prosemirror-view": "^1.31.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -31,8 +48,15 @@
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/delimiter": "^1.3.0",
+    "@editorjs/image": "^2.8.2",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/simple-image": "^1.5.1",
     "@types/jasmine": "~4.3.0",
     "@types/marked": "^4.3.0",
+    "editorjs-table": "^1.4.10",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
