--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "codex-notifier": "^1.1.2",
     "codex-tooltip": "^1.0.5",
     "marked": "^4.3.0",
+    "ng2-img-max": "^2.2.9",
     "ngx-markdown": "^16.0.0",
     "prismjs": "^1.28.0",
     "prosemirror-example-setup": "^1.2.2",
