--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
     "@editorjs/embed": "^2.6.0",
     "@editorjs/header": "^2.7.0",
     "@editorjs/nested-list": "^1.3.0",
+    "@editorjs/paragraph": "^2.11.3",
     "@editorjs/table": "^2.2.2",
-    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@rxpm/editor-js-code": "^0.0.1",
     "bootstrap": "^5.3.1",
     "codex-notifier": "^1.1.2",
     "codex-tooltip": "^1.0.5",
+    "editorjs-text-alignment-blocktune": "^1.0.3",
     "marked": "^4.3.0",
+    "ng-circle-progress": "^1.7.1",
     "ng2-img-max": "^2.2.9",
+    "ngx-lottie": "^10.0.0",
     "ngx-markdown": "^16.0.0",
     "prismjs": "^1.28.0",
     "prosemirror-example-setup": "^1.2.2",
@@ -44,6 +48,7 @@
     "prosemirror-view": "^1.31.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -59,6 +64,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/marked": "^4.3.0",
     "editorjs-table": "^1.4.10",
+    "editorjs-undo": "^1.0.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
