--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "editorjs-text-alignment-blocktune": "^1.0.3",
     "marked": "^4.3.0",
     "ng-circle-progress": "^1.7.1",
+    "ng2-dragula": "^5.0.1",
     "ng2-img-max": "^2.2.9",
     "ngx-lottie": "^10.0.0",
     "ngx-markdown": "^16.0.0",
