book crud update

--- a/angular.json
+++ b/angular.json
@@ -55,9 +55,9 @@
             "development": {
               "buildOptimizer": false,
               "optimization": {
-                "scripts": true,
+                "scripts": false,
                 "styles": {
-                  "minify": true,
+                  "minify": false,
                   "inlineCritical": false
                 },
                 "fonts": true
