--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,9 @@
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "node_modules/marked/marked.min.js"
+            ],
+            "allowedCommonJsDependencies": [
+              "editorjs-text-color-plugin"
             ]
           },
           "configurations": {
