--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@editorjs/attaches": "^1.3.0",
     "@editorjs/editorjs": "^2.28.2",
     "@editorjs/embed": "^2.6.0",
-    "@editorjs/header": "^2.7.0",
+    "@editorjs/header": "^2.8.1",
     "@editorjs/nested-list": "^1.3.0",
     "@editorjs/paragraph": "^2.11.3",
     "@editorjs/table": "^2.2.2",
@@ -58,6 +58,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/marked": "^4.3.0",
     "editorjs-table": "^1.4.10",
+    "editorjs-text-color-plugin": "^2.0.4",
     "editorjs-undo": "^1.0.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
