--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@editorjs/table": "^2.2.2",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@rxpm/editor-js-code": "^0.0.1",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.1",
     "codex-notifier": "^1.1.2",
     "codex-tooltip": "^1.0.5",
